--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
+    "swr": "^2.2.5",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
