--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "axios": "^1.7.2",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-geolocation": "^1.1.0",
     "recoil": "^0.7.7",
     "swr": "^2.2.5",
     "tailwindcss": "3.4.1",
