--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-geolocation": "^1.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "recoil": "^0.7.7",
     "swr": "^2.2.5",
     "tailwindcss": "3.4.1",
