--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "geist": "^1.2.1",
     "next": "latest",
+    "next-auth": "^5.0.0-beta.20",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
