--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.4.17",
     "axios": "^1.7.2",
     "geist": "^1.2.1",
+    "nanoid": "^5.0.7",
     "next": "latest",
     "next-auth": "^5.0.0-beta.20",
     "postcss": "8.4.33",
