--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^5.0.7",
     "next": "latest",
     "next-auth": "^5.0.0-beta.20",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
