--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "recoil": "^0.7.7",
     "swr": "^2.2.5",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/web-push": "^3.6.3",
     "encoding": "^0.1.13"
   }
 }
